samples/negative/bad-level.minitt
--
-- Created by intellij-minitt on 2019-03-27
-- bad-level
-- Author: ice10
--

let badLevel: Type = \Pi x: Type1. x;
